src/test/ui/symbol-names/const-generics-demangling.stderr
error: symbol-name(_RMCsCRATE_HASH_1cINtB<REF>_8UnsignedKhb_E)
  --> $DIR/const-generics-demangling.rs:8:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Unsigned<11u8>>)
  --> $DIR/const-generics-demangling.rs:8:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Unsigned<11>>)
  --> $DIR/const-generics-demangling.rs:8:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs_CsCRATE_HASH_1cINtB<REF>_6SignedKsn98_E)
  --> $DIR/const-generics-demangling.rs:16:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Signed<-152i16>>)
  --> $DIR/const-generics-demangling.rs:16:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Signed<-152>>)
  --> $DIR/const-generics-demangling.rs:16:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs0_CsCRATE_HASH_1cINtB<REF>_4BoolKb1_E)
  --> $DIR/const-generics-demangling.rs:24:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Bool<true>>)
  --> $DIR/const-generics-demangling.rs:24:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Bool<true>>)
  --> $DIR/const-generics-demangling.rs:24:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_RMs1_CsCRATE_HASH_1cINtB<REF>_4CharKc2202_E)
  --> $DIR/const-generics-demangling.rs:32:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(<c[HASH]::Char<'∂'>>)
  --> $DIR/const-generics-demangling.rs:32:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<c::Char<'∂'>>)
  --> $DIR/const-generics-demangling.rs:32:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 12 previous errors

